--- a/index.html
+++ b/index.html
@@ -585,19 +585,19 @@
         <form class="row g-3">
           <div class="col-md-6 c_input">
             <label for="inputEmail4" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="inputEmail4">
+            <input type="text" class="form-control shadow-none" id="inputEmail4">
           </div>
           <div class="col-md-6">
             <label for="inputPassword4" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="inputPassword4">
+            <input type="text" class="form-control shadow-none" id="inputPassword4">
           </div>
           <div class="col-12">
             <label for="inputPassword4" class="form-label">Your Email</label>
-            <input type="email" class="form-control" id="inputAddress" >
+            <input type="email" class="form-control shadow-none" id="inputAddress" >
           </div>
           <div class="col-12">
             <label for="inputAddress2" class="form-label">Your Message</label>
-            <input type="text" class="form-control" id="inputAddress2" placeholder="">
+            <input type="text" class="form-control shadow-none" id="inputAddress2" placeholder="">
           </div>
         </form>
         <div class="row justify-content-center">
